packages/jinja2-async-environment/jinja2_async_environment-0.14.2.tar.gz/jinja2_async_environment-0.14.2/.zencoder/Zencoder-c9de499c-b944-4dff-9dc8-aba26423bbe9.log
[1m========================================================================= test session starts =========================================================================[0m
platform darwin -- Python 3.13.5, pytest-8.4.0, pluggy-1.6.0 -- /Users/les/Projects/jinja2-async-environment/.venv/bin/python
cachedir: .pytest_cache
benchmark: 5.1.0 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
rootdir: /Users/les/Projects/jinja2-async-environment
configfile: pyproject.toml
plugins: xdist-3.7.0, anyio-4.9.0, timeout-2.4.0, cov-6.2.1, mock-3.14.1, benchmark-5.1.0, asyncio-1.0.0
timeout: 300.0s
timeout method: thread
timeout func_only: False
asyncio: mode=Mode.AUTO, asyncio_default_fixture_loop_scope=function, asyncio_default_test_loop_scope=function
[1mcollecting ... [0m[1mcollecting 0 items / 1 error                                                                                                                                          [0m[1mcollected 0 items / 1 error                                                                                                                                           [0m

=============================================================================== ERRORS ================================================================================
[31m[1m___________________________________________________________ ERROR collecting tests/test_loaders_coverage.py ___________________________________________________________[0m
[31m.venv/lib/python3.13/site-packages/_pytest/python.py:497: in importtestmodule
    mod = import_path(
.venv/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_loaders_coverage.py:9: in <module>
    from jinja2_async_environment.environment import AsyncEnvironment
jinja2_async_environment/__init__.py:3: in <module>
    from .loaders import (
E     File "/Users/les/Projects/jinja2-async-environment/jinja2_async_environment/loaders.py", line 52
E       self.searchpath = [AsyncPathstr):
E                                      ^
E   SyntaxError: closing parenthesis ')' does not match opening parenthesis '['[0m
[36m[1m======================================================================= short test summary info =======================================================================[0m
[31mERROR[0m tests/test_loaders_coverage.py
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
[31m========================================================================== [31m[1m1 error[0m[31m in 0.76s[0m[31m ===========================================================================[0m
